fix: remove position property from code to allow carret cursor to be visible

--- a/src/components/editor/editor.css
+++ b/src/components/editor/editor.css
@@ -255,7 +255,6 @@
     }
 
     & code:not(pre code):not(.not-typography code) {
-      position: relative;
       border: 1px solid var(--color-border);
       border-radius: var(--radius-md);
       background-color: var(--color-muted);
